[project]
name = "mus2muc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clingo>=5.8.0",
    "frozendict>=2.4.6",
    "lark>=1.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[project.scripts]
mus2muc = "mus2muc.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"mus2muc" = ["**/*.lp", "**/*.lark"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mus2muc*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
